# cs-admin

./: README.md  default.env  main.py  pyproject.toml
app/: __init__.py
app/api/v1/auth/: router.py
app/api/v1/cs_tasks/: __init__.py  router.py
app/api/v1/data_clone/: router.py  schemas.py
app/core/: __init__.py  config.py  database.py  dependencies.py
app/models/: user.py
app/repositories/: user.py
app/services/: auth.py
app/services/airflow/: client.py  service.py
auth/: deps.py  login.py  users_db.py
models/: user.py
routers/: cs_tasks.py
