[tool.poetry]
name = "cs-admin"
version = "0.1.0"
description = ""
authors = ["songtov <songchiho777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic = "^2.11.2"
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
aiosqlite = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.7"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
pytest-watcher = "^0.4.3"
pytest-asyncio = "^0.23.5"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.lint]
shell = "black . && isort . && ruff check ."

[tool.poe.tasks.test]
cmd = "pytest -v --cov=. --cov-report=term --cov-report=html:htmlcov"

[tool.poe.tasks.watch-test]
cmd = "ptw . --now --clear"

[tool.poe.tasks.run]
help = "Run the main application"
shell = "fastapi dev main.py"
envfile = ".env"
